0710
리뷰부분 없애고 좋아요 싫어요 공유 수 보이게 만들고, 일정 수정하는 부분에 있어서 드레그 드랍으로 바꿔 보다 일정 수정에 있어 더 수월하게 바꿨습니다. 또한 공유된 일정중에서 맘에 드는 부분을 내 일정으로 가져오는 것까지 백엔드로 구현되게 만들었습니다